# python-template

./: .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  CONTRIBUTING.md  LICENSE  Makefile  README.MD  README.customization.md  README.md  SECURITY.md  main.py  pyproject.toml  readme.md  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: README.md  ci.yml  run_code_check.yml  run_tests.yml
app/: demo_data.py  demo_service.py  str_helper.py  version_data.py  version_utils.py
docker/: build.Dockerfile  build.Dockerfile.dockerignore  test.Dockerfile  test.Dockerfile.dockerignore
scripts/: rename-template.ps1  rename-template.sh
scripts/ubuntu/: _activate.sh  _location.sh  build.sh  check.sh  cleanup.sh  cleanup_all.sh  format.sh  install-dev.sh  install-pre-commit.sh  install.sh  lint.sh  run.sh  test.sh  uninstall.sh  upgrade.sh  wsl-install-python.sh
scripts/windows/: _activate.ps1  check.ps1  cleanup.ps1  cleanup_all.ps1  format.ps1  install-dev.ps1  install-pre-commit.ps1  install.ps1  run.ps1  test.ps1  uninstall.ps1  upgrade.ps1
tests/: test_demo_data.py  test_demo_data_class.py  test_demo_data_mock.py  test_demo_data_mock_func.py  test_demo_data_mock_with.py  test_demo_data_pytest.py  test_demo_service.py  test_str_helper.py  test_version_data.py  test_version_utils.py
