[project]
name = "python-template"
version = "1.0.0"
description = "Python project template with unittest and pytest examples"
requires-python = ">=3.13"
dependencies = [
    "pydantic",
    "requests",
    "types-requests"
]

[dependency-groups]
dev = [
    "flake8",
    "mypy",
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-cov",
    "pytest-md-report",
    "pytest-mock",
    "ruff"
]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::FutureWarning"
]
markers = [
    "component = Component tests"
]
dirs = "tests"
pythonpath = ["."]

[tool.ruff]
line-length = 80
exclude = [
    "node_modules",
    "__pycache__",
    ".git",
    ".github",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    ".py-venv",
    "venv",
    "py-venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "htmlcov",
    "tests/data"
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.coverage.run]
omit = [
    "**/tests/*",
    "**/debugpy/*"
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
exclude = [
    "node_modules",
    "__pycache__",
    ".git",
    ".github",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    ".py-venv",
    "venv",
    "py-venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "htmlcov",
    "blib2to3",
    "tests/data"
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
pythonPlatform = "All"
typeCheckingMode = "standard"
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.git",
    "**/.github",
    "**/.hg",
    "**/.mypy_cache",
    "**/.tox",
    "**/.venv",
    "**/.py-venv",
    "**/venv",
    "**/py-venv",
    "**/_build",
    "**/buck-out",
    "**/build",
    "**/dist",
    "**/htmlcov",
    "**/blib2to3",
    "**/tests/data"
]
